--- a/html/index.html
+++ b/html/index.html
@@ -10,7 +10,27 @@
 </head>
 
 <body>
-    <h1>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et laboriosam pariatur facere aspernatur nemo nihil iste quod maiores, distinctio vel. Tenetur voluptatum, repellendus nisi qui nostrum recusandae veniam cum asperiores.</h1>
+    <header class="header">
+        <div class="container">
+            <h1 class="logo">Veterinaria</h1>
+            <span class="icon-menu" id="btn-menu"></span>
+            <nav class="nav" id="nav">
+                <ul class="menu">
+                    <li class="menu__item"><a href="index.html" class="menu__link select">Inicio</a></li>
+                    <li class="menu__item"><a href="contacto.html" class="menu__link">Contacto</a></li>
+                    <li class="menu__item"><a href="trabajadores.html" class="menu__link">Trabajadores</a></li>
+                    <li class="menu__item"><a href="quienessomos.html" class="menu__link">Quienes Somos</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <div class="banner">
+        <img src="img/banner.jpg" alt="Banner" class="banner__img">
+        <div class="container">
+            <h2 class="banner__titulo">La mejor atención para tus mascotas</h2>
+            <div class="banner__txt">Los cuidamos como si fueran nuestros</div>
+        </div>
+    </div>
 
 
 </body>
