--- a/html/index.html
+++ b/html/index.html
@@ -31,8 +31,19 @@
             <div class="banner__txt">Los cuidamos como si fueran nuestros</div>
         </div>
     </div>
+    <main class="main">
 
-
+    </main>
+    <footer class="footer">
+        <div class="social">
+            <a class="icon-facebook"></a>
+            <a class="icon-twitter"></a>
+            <a class="icon-instagram"></a>
+            <a class="icon-"></a>
+        </div>
+        <p class="copy">&copy; Veterinaria 2021 - Todos los derechos reservados</p>
+    </footer>
+    <script src="js/menu.js"></script>
 </body>
 
 </html>
