--- a/index.html
+++ b/index.html
@@ -33,47 +33,72 @@
     </div>
     <main class="main">
         <div class="container">
-            <section class="info">
-                <article class="infor__columna">
-                    <img src="img/img1.jpg" alt="" class="info__img">
-                    <h2 class="info__titulo">Titulo 1</h2>
-                    <p class="info__txt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, fuga!</p>
+            <section class="adopciones">
+                <h2 class="section__titulo">Mascotas en Adopción</h2>
+                <article class="adopciones__columna">
+                    <img src="img/animal.jpg" alt="" class="adopciones__img">
+                    <h2 class="adopciones__titulo">Titulo 1</h2>
+                    <p class="adopciones__txt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, fuga!</p>
                 </article>
             </section>
             <section>
-                <article>
-                    <img src="img/img1.jpg" alt="" class="info__img">
-                    <h2 class="info__titulo">Titulo 2</h2>
-                    <p class="info__txt">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas, nulla.</p>
+                <article class="adopciones__columna">
+                    <img src="img/animal.jpg" alt="" class="adopciones__img">
+                    <h2 class="adopciones__titulo">Titulo 2</h2>
+                    <p class="adopciones__txt">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas, nulla.</p>
                 </article>
             </section>
             <section>
-                <article>
-                    <img src="img/img1.jpg" alt="" class="info__img">
-                    <h2 class="info__titulo">Titulo 3</h2>
-                    <p class="info__txt">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas, nulla.</p>
+                <article class="adopciones__columna">
+                    <img src="img/animal.jpg" alt="" class="adopciones__img">
+                    <h2 class="adopciones__titulo">Titulo 3</h2>
+                    <p class="adopciones__txt">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas, nulla.</p>
+                </article class="info__columna">
+            </section>
+            <section>
+                <article class="adopciones__columna">
+                    <img src="img/animal.jpg" alt="" class="adopciones__img">
+                    <h2 class="adopciones__titulo">Titulo 4</h2>
+                    <p class="adopciones__txt">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas, nulla.</p>
                 </article>
             </section>
             <section>
-                <article>
-                    <img src="img/img1.jpg" alt="" class="info__img">
-                    <h2 class="info__titulo">Titulo 4</h2>
-                    <p class="info__txt">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas, nulla.</p>
+                <article class="adopciones__columna">
+                    <img src="img/animal.jpg" alt="" class="adopciones__img">
+                    <h2 class="adopciones__titulo">Titulo 5</h2>
+                    <p class="adopciones__txt">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas, nulla.</p>
                 </article>
             </section>
             <section>
-                <article>
-                    <img src="img/img1.jpg" alt="" class="info__img">
-                    <h2 class="info__titulo">Titulo 5</h2>
-                    <p class="info__txt">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas, nulla.</p>
+                <article class="adopciones__columna">
+                    <img src="img/animal.jpg" alt="" class="adopciones__img">
+                    <h2 class="adopciones__titulo">Titulo 6</h2>
+                    <p class="adopciones__txt">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas, nulla.</p>
                 </article>
             </section>
-            <section>
-                <article>
-                    <img src="img/img1.jpg" alt="" class="info__img">
-                    <h2 class="info__titulo">Titulo 6</h2>
-                    <p class="info__txt">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas, nulla.</p>
-                </article>
+            <section class="trabajadores">
+                <h2 class="section__titulo">Nuestros Trabajadores</h2>
+                <div class="trabajadores__columna">
+                    <img src="img/trabajador.jpg" alt="" class="trabajadores__img">
+                    <div class="trabajadores__descripcion">
+                        <h3 class="trabajadores__titulo">Hugo Cerda</h3>
+                        <p class="trabajadores__txt">Lorem ipsum dolor sit amet.</p>
+                    </div>
+                </div>
+                <div class="trabajadores__columna">
+                    <img src="img/trabajador.jpg" alt="" class="trabajadores__img">
+                    <div class="trabajadores__descripcion">
+                        <h3 class="trabajadores__titulo">Hugo Cerda</h3>
+                        <p class="trabajadores__txt">Lorem ipsum dolor sit amet.</p>
+                    </div>
+                </div>
+                <div class="trabajadores__columna">
+                    <img src="img/trabajador.jpg" alt="" class="trabajadores__img">
+                    <div class="trabajadores__descripcion">
+                        <h3 class="trabajadores__titulo">Hugo Cerda</h3>
+                        <p class="trabajadores__txt">Lorem ipsum dolor sit amet.</p>
+                    </div>
+                </div>
             </section>
         </div>
     </main>
