--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
 </head>
 
 <body>
-    <header class="header">
-        <div class="container">
-            <h1 class="logo">Veterinaria</h1>
-            <span class="icon-menu" id="btn-menu"></span>
-            <nav class="nav" id="nav">
-                <ul class="menu">
-                    <li class="menu__item"><a href="index.html" class="menu__link select">Inicio</a></li>
-                    <li class="menu__item"><a href="contacto.html" class="menu__link">Contacto</a></li>
-                    <li class="menu__item"><a href="trabajadores.html" class="menu__link">Trabajadores</a></li>
-                    <li class="menu__item"><a href="quienessomos.html" class="menu__link">Quienes Somos</a></li>
-                </ul>
-            </nav>
+    <header class="main-header">
+        <div class="container container--flex">
+            <div class="logo-container column column--50">
+                <h1 class="logo">Veterinaria Cola</h1>
+            </div>
+            <div class="main-header__contactInfo column column--50">
+                <p class="main-header__contactInfo__phone">
+                    <span class="icon-phone">
+                        <img src="icons/icon-phone.png" alt="">
+                    </span>
+                </p>
+            </div>
         </div>
     </header>
     <div class="banner">
