--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header class="main-header">
         <div class="container container--flex">
-            <h1 class="logo">Veterinaria Proyecto</h1>
+            <h1 class="logo">Veterinaria Cola</h1>
         </div>
         <div class="main-header__contactInfo column column--50">
             <p class="main-header__contactInfo__phone">
@@ -35,7 +35,7 @@
             </span>
             <ul class="menu">
                 <li class="menu__item">
-                    <a href="/" class="menu__link">Inicio</a>
+                    <a href="/" class="menu__link menu__link--select">Inicio</a>
                 </li>
                 <li class="menu__item">
                     <a href="adopciones.html" class="menu__link">Adopciones</a>
@@ -85,22 +85,22 @@
             <h2 class="today-special__title">Mascotas en Adopción</h2>
             <div class="container container__flex">
                 <div class="column column--50--25">
-                    <img src="" alt="" class="today-special__img">
+                    <img src="img/cola.jpg" alt="" class="today-special__img">
                     <div class="today-special__title">Cola</div>
                     <div class="today-special__price">Romana</div>
                 </div>
                 <div class="column column--50--25">
-                    <img src="" alt="" class="today-special__img">
+                    <img src="img/leon.jpg" alt="" class="today-special__img">
                     <div class="today-special__title">Leon</div>
                     <div class="today-special__price">Puddle-Maltes</div>
                 </div>
                 <div class="column column--50--25">
-                    <img src="" alt="" class="today-special__img">
+                    <img src="img/bonnie.jpg" alt="" class="today-special__img">
                     <div class="today-special__title">Bonnie</div>
                     <div class="today-special__price">Labrador</div>
                 </div>
                 <div class="column column--50--25">
-                    <img src="" alt="" class="today-special__img">
+                    <img src="img/negrita.jpg" alt="" class="today-special__img">
                     <div class="today-special__title">Negrita</div>
                     <div class="today-special__price">Bombay</div>
                 </div>
