--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 <div class="column column--50--25">
                     <img src="img/leon.jpg" alt="" class="today-special__img">
                     <div class="today-special__title">Leon</div>
-                    <div class="today-special__price">Puddle-Maltes</div>
+                    <div class="today-special__price">Poodle-Maltes</div>
                 </div>
                 <div class="column column--50--25">
                     <img src="img/bonnie.jpg" alt="" class="today-special__img">
