adicion del banner

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0,user-scalable=yes, maximum-scale=3.0, minimum-scale=1.0">
     <title>Veterinaria Cola</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -92,7 +92,7 @@
                 <div class="column column--50--25">
                     <img src="img/leon.jpg" alt="" class="today-special__img">
                     <div class="today-special__title">Leon</div>
-                    <div class="today-special__price">Poodle-Maltes</div>
+                    <div class="today-special__price">Poodlek-Maltes</div>
                 </div>
                 <div class="column column--50--25">
                     <img src="img/bonnie.jpg" alt="" class="today-special__img">
