fix al menu y adicion de animacion

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <span class="icon-menu" id="btn-menu">
                 <img src="icons/icon-menu.png" alt="">
             </span>
-            <ul class="menu">
+            <ul class="menu" id="menu">
                 <li class="menu__item">
                     <a href="/" class="menu__link menu__link--select">Inicio</a>
                 </li>
