--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <img src="icons/icon-phone.png" alt="">+569 1234 5678
                 </span>
             </p>
-            <p class="main-header__contactInfo__adress">
+            <p class="main-header__contactInfo__address">
                 <span class="icon-location">
                     <img src="icons/icon-location.png" alt=""> Libertad #666 - Viña del Mar, Chile
                 </span>
@@ -48,9 +48,9 @@
                 </li>
             </ul>
             <div class="social-icon">
-                <a href="" class="social-icon__link"><span class="icon-facebook"><img src="icons/icon-facebook.png" alt=""></span></a>
-                <a href="" class="social-icon__link"><span class="icon-twitter"><img src="icons/icon-twitter.png" alt=""></span></a>
-                <a href="" class="social-icon__link"><span class="icon-mail"><img src="icons/icon-mail.png" alt=""></span></a>
+                <a href="" class="social-icon__link"><span class="icon"><img src="icons/icon-facebook.png" alt=""></span></a>
+                <a href="" class="social-icon__link"><span class="icon"><img src="icons/icon-twitter.png" alt=""></span></a>
+                <a href="" class="social-icon__link"><span class="icon"><img src="icons/icon-mail.png" alt=""></span></a>
             </div>
         </div>
     </nav>
@@ -82,7 +82,7 @@
         </section>
 
         <section class="group today-special">
-            <h2 class="today-special__title">Mascotas en Adopción</h2>
+            <h2 class="group__title">Mascotas en Adopción</h2>
             <div class="container container__flex">
                 <div class="column column--50--25">
                     <img src="img/cola.jpg" alt="" class="today-special__img">
@@ -92,7 +92,7 @@
                 <div class="column column--50--25">
                     <img src="img/leon.jpg" alt="" class="today-special__img">
                     <div class="today-special__title">Leon</div>
-                    <div class="today-special__price">Poodlek-Maltes</div>
+                    <div class="today-special__price">Poodle-Maltes</div>
                 </div>
                 <div class="column column--50--25">
                     <img src="img/bonnie.jpg" alt="" class="today-special__img">
@@ -124,7 +124,7 @@
             <div class="column column--33">
                 <h2 class="column__title">Síguenos en nuestras redes sociales</h2>
                 <p class="column__txt">
-                    <a href="" class="icon-facebook"><img src="icons/facebook" alt="">Facebook</a>
+                    <a href="" class="icon-facebook"><img src="icons/icon-facebook.png" alt="">Facebook</a>
                 </p>
                 <p class="column__txt">
                     <a href="" class="icon-twitter"><img src="icons/icon-twitter.png" alt="">Síguenos en Twitter</a>
