--- a/index.html
+++ b/index.html
@@ -16,14 +16,10 @@
         </div>
         <div class="main-header__contactInfo column column--50">
             <p class="main-header__contactInfo__phone">
-                <span class="icon-phone">
-                    <img src="icons/icon-phone.png" alt="">+569 1234 5678
-                </span>
+                <span class="icon-phone"><img src="icons/icon-phone.png" alt="">+569 1234 5678</span>
             </p>
             <p class="main-header__contactInfo__address">
-                <span class="icon-location">
-                    <img src="icons/icon-location.png" alt=""> Libertad #666 - Viña del Mar, Chile
-                </span>
+                <span class="icon-location"><img src="icons/icon-location.png" alt=""> Libertad #666 - Viña del Mar, Chile</span>
             </p>
         </div>
     </header>
@@ -83,7 +79,7 @@
 
         <section class="group today-special">
             <h2 class="group__title">Mascotas en Adopción</h2>
-            <div class="container container__flex">
+            <div class="container container--flex">
                 <div class="column column--50--25">
                     <img src="img/cola.jpg" alt="" class="today-special__img">
                     <div class="today-special__title">Cola</div>
