--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <div class="container container--flex">
             <h1 class="logo">Veterinaria Cola</h1>
         </div>
-        <div class="main-header__contactInfo column column--50">
+        <div class="main-header__contactInfo column ">
             <p class="main-header__contactInfo__phone">
-                <span class="icon-phone"><img src="icons/icon-phone.png" alt="">+569 1234 5678</span>
+                <span class="icon-phone"><img src="icons/icon-phone.png" alt="" class="icon-phone">+569 1234 5678</span>
             </p>
             <p class="main-header__contactInfo__address">
                 <span class="icon-location"><img src="icons/icon-location.png" alt=""> Libertad #666 - Viña del Mar, Chile</span>
