--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <span class="icon-phone"><img src="icons/icon-phone.png" alt="" class="icon-phone">+569 1234 5678</span>
             </p>
             <p class="main-header__contactInfo__address">
-                <span class="icon-location"><img src="icons/icon-location.png" alt=""> Libertad #666 - Viña del Mar, Chile</span>
+                <span class="icon-location"><img src="icons/icon-location.png" alt=""> Libertad #666 - Valparaíso, Chile</span>
             </p>
         </div>
     </header>
