--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <section class="group group--color">
             <div class="container">
                 <h2 class="main__title">Bienvenido a su Veterinaria</h2>
-                <p class="main__txt">Lorem ipsum dolor sit amet.</p>
+                <p class="main__txt">Donde los cuidamos como si fueran nuestros</p>
             </div>
         </section>
 
@@ -70,8 +70,8 @@
                     <img src="img/veterinario.jpg" alt="">
                 </div>
                 <div class="column column--50">
-                    <h3 class="column__title">Lorem, ipsum dolor.</h3>
-                    <p class="column__txt">Lorem ipsum dolor sit amet.</p>
+                    <h3 class="column__title">Médico Veterinario</h3>
+                    <p class="column__txt">Hugo Cerdá Jara </p>
                     <a href="" class="btn btn--contact">Contacto</a>
                 </div>
             </div>
