--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <div class="container container--flex">
             <div class="column column--33">
                 <h2 class="column__title">¿Por qué visitarnos?</h2>
-                <p class="column__txt">Lorem, ipsum dolor.</p>
+                <p class="column__txt">Porqué cuidaremos a tus mascotas como si fueran nuestras, contamos con una amplia variedad de profesionales para brindar la mejor atención</p>
             </div>
             <div class="column column--33">
                 <h2 class="column__title">Contáctanos</h2>
