line height responsive fix

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 </div>
                 <div class="column column--50">
                     <h3 class="column__title">Médico Veterinario</h3>
-                    <p class="column__txt">Hugo Cerdá Jara </p>
+                    <p class="column__txt">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat architecto unde dolor eum cumque nobis porro nulla eligendi, laboriosam fugit, aperiam ab. Quos aliquid ex molestias animi. Neque, ullam culpa. </p>
                     <a href="" class="btn btn--contact">Contacto</a>
                 </div>
             </div>
