--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <a href="adopciones.html" class="menu__link">Adopciones</a>
                 </li>
                 <li class="menu__item">
-                    <a href="conocenos.html" class="menu__link">Conocenos</a>
+                    <a href="conocenos.html" class="menu__link">Conócenos</a>
                 </li>
                 <li class="menu__item">
                     <a href="contacto.html" class="menu__link">Contacto</a>
