--- a/contacto.html
+++ b/contacto.html
@@ -78,28 +78,28 @@
             </div>
         </section>
 
-        <section class="group today-special">
+        <section class="group adopciones">
             <h2 class="group__title">Mascotas en Adopción</h2>
             <div class="container container--flex">
                 <div class="column column--50--25">
-                    <img src="img/cola.jpg" alt="" class="today-special__img">
-                    <div class="today-special__title">Cola</div>
-                    <div class="today-special__price">Romana</div>
+                    <img src="img/cola.jpg" alt="" class="adopciones__img">
+                    <div class="adopciones__titulo">Cola</div>
+                    <div class="adopciones__raza">Romana</div>
                 </div>
                 <div class="column column--50--25">
-                    <img src="img/leon.jpg" alt="" class="today-special__img">
-                    <div class="today-special__title">Leon</div>
-                    <div class="today-special__price">Poodle-Maltes</div>
+                    <img src="img/leon.jpg" alt="" class="adopciones__img">
+                    <div class="adopciones__titulo">Leon</div>
+                    <div class="adopciones__raza">Poodle-Maltes</div>
                 </div>
                 <div class="column column--50--25">
-                    <img src="img/bonnie.jpg" alt="" class="today-special__img">
-                    <div class="today-special__title">Bonnie</div>
-                    <div class="today-special__price">Labrador</div>
+                    <img src="img/bonnie.jpg" alt="" class="adopciones__img">
+                    <div class="adopciones__titulo">Bonnie</div>
+                    <div class="adopciones__raza">Labrador</div>
                 </div>
                 <div class="column column--50--25">
-                    <img src="img/negrita.jpg" alt="" class="today-special__img">
-                    <div class="today-special__title">Negrita</div>
-                    <div class="today-special__price">Bombay</div>
+                    <img src="img/negrita.jpg" alt="" class="adopciones__img">
+                    <div class="adopciones__titulo">Negrita</div>
+                    <div class="adopciones__raza">Bombay</div>
                 </div>
             </div>
         </section>
