fix y adicion favicon

--- a/adopciones.html
+++ b/adopciones.html
@@ -59,8 +59,8 @@
     <main class="main">
         <section class="group group--color">
             <div class="container">
-                <h2 class="main__title">Adopta a un amigo</h2>
-                <p class="main__txt">Tu mejor amigo te esta esperando</p>
+                <h2 class="main__title">Adopta un amigo</h2>
+                <p class="main__txt">Tu mejor amigo te está esperando</p>
             </div>
         </section>
 
