--- a/conocenos.html
+++ b/conocenos.html
@@ -60,7 +60,7 @@
         <section class="group group--color">
             <div class="container">
                 <h2 class="main__title">Conoce más sobre nosotros</h2>
-                <p class="main__txt">La salud de tu mascota esta en buenas manos</p>
+                <p class="main__txt">La salud de tu mascota está en buenas manos</p>
             </div>
         </section>
 
