--- a/conocenos.html
+++ b/conocenos.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0,user-scalable=yes, maximum-scale=3.0, minimum-scale=1.0">
     <title>Veterinaria Cola</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="icons/icon.png">
 </head>
 
 <body>
