--- a/index.html
+++ b/index.html
@@ -17,10 +17,14 @@
         </div>
         <div class="main-header__contactInfo column ">
             <p class="main-header__contactInfo__phone">
-                <span class="icon-phone"><img src="icons/icon-phone.png" alt="" class="icon-phone">+569 1234 5678</span>
+                <span class="icon-phone">
+                    <img src="icons/icon-phone.png" alt="" class="icon-phone">+569 1234 5678
+                </span>
             </p>
             <p class="main-header__contactInfo__address">
-                <span class="icon-location"><img src="icons/icon-location.png" alt=""> Libertad #666 - Valparaíso, Chile</span>
+                <span class="icon-location">
+                    <img src="icons/icon-location.png" alt=""> Libertad #666 - Valparaíso, Chile
+                </span>
             </p>
         </div>
     </header>
@@ -45,9 +49,21 @@
                 </li>
             </ul>
             <div class="social-icon">
-                <a href="" class="social-icon__link"><span class="icon"><img src="icons/icon-facebook.png" alt=""></span></a>
-                <a href="" class="social-icon__link"><span class="icon"><img src="icons/icon-twitter.png" alt=""></span></a>
-                <a href="" class="social-icon__link"><span class="icon"><img src="icons/icon-mail.png" alt=""></span></a>
+                <a href="" class="social-icon__link">
+                    <span class="icon">
+                        <img src="icons/icon-facebook.png" alt="">
+                    </span>
+                </a>
+                <a href="" class="social-icon__link">
+                    <span class="icon">
+                        <img src="icons/icon-twitter.png" alt="">
+                    </span>
+                </a>
+                <a href="" class="social-icon__link">
+                    <span class="icon">
+                        <img src="icons/icon-mail.png" alt="">
+                    </span>
+                </a>
             </div>
         </div>
     </nav>
