--- a/contacto.html
+++ b/contacto.html
@@ -60,7 +60,7 @@
     <main class="main">
         <section class="group group--color">
             <div class="container">
-                <h2 class="main__title">Contactanos</h2>
+                <h2 class="main__title">Contáctanos</h2>
                 <p class="main__txt">Estamos al cuidado de tu mascota</p>
             </div>
         </section>
@@ -74,7 +74,7 @@
                     <h3 class="column__title">Datos de contacto</h3>
                     <p class="column__txt">Teléfono: +569 1234 5678 </p>
                     <p class="column__txt">consultas@veterinariacola.com </p>
-                    <p class="column__txt">Atencion las 24 horas de la semana. </p>
+                    <p class="column__txt">Atención las 24 horas de la semana. </p>
                 </div>
             </div>
         </section>
