adicion formulario sin estilo

--- a/contacto.html
+++ b/contacto.html
@@ -79,6 +79,30 @@
             </div>
         </section>
 
+        <section class="main-formulario group">
+            <fieldset class="container container--flex">
+                <legend>Formulario de Contacto</legend>
+                <form action="#" method="POST">
+                    <div class="container container--flex">
+                        <div class="column column--50">
+                            <label for="name">Nombre:</label>
+                            <input type="text" id="nombre" name="nombre" placeholder="Ingrese su nombre"><br><br>
+                            <label for="correo">Correo:</label>
+                            <input type="email" id="email" name="email" placeholder="Ingrese su email"><br><br>
+                            <label for="telefono">Telefono:</label>
+                            <input type="text" id="telefono" name="telefono" placeholder="Ingrese su teléfono"><br><br>
+                            <input type="submit" value="Enviar">&nbsp;&nbsp;
+                            <input type="reset" value="Limpiar"><br><br>
+                        </div>
+                        <div class="column column--50">
+                            <textarea name="mensaje" id="mensaje" cols="30" rows="10"></textarea><br><br>
+                        </div>
+                    </div>
+                </form>
+            </fieldset>
+
+        </section>
+
         <section class="group adopciones">
             <h2 class="group__title">Mascotas en Adopción</h2>
             <div class="container container--flex">
