--- a/contacto.html
+++ b/contacto.html
@@ -89,7 +89,7 @@
                             <input type="text" id="nombre" name="nombre" placeholder="Ingrese su nombre"><br><br>
                             <label for="correo">Correo:</label>
                             <input type="email" id="email" name="email" placeholder="Ingrese su email"><br><br>
-                            <label for="telefono">Telefono:</label>
+                            <label for="telefono">Teléfono:</label>
                             <input type="text" id="telefono" name="telefono" placeholder="Ingrese su teléfono"><br><br>
                             <input type="submit" value="Enviar">&nbsp;&nbsp;
                             <input type="reset" value="Limpiar"><br><br>
