--- a/conocenos.html
+++ b/conocenos.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0,user-scalable=yes, maximum-scale=3.0, minimum-scale=1.0">
     <title>Veterinaria Cola</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/conocenos.css">
     <link rel="shortcut icon" href="icons/icon.png">
 </head>
 
@@ -60,50 +61,31 @@
     <main class="main">
         <section class="group group--color">
             <div class="container">
-                <h2 class="main__title">Conoce más sobre nosotros</h2>
-                <p class="main__txt">La salud de tu mascota está en buenas manos</p>
+                <h2 class="main__title">Sobre Nosotros</h2>
+                <p class="main__txt">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates, inventore.</p>
             </div>
         </section>
 
-        <section class="group main__about__description">
+        <section class="group our-team">
+            <h2 class="group__title">Nuestro Equipo</h2>
             <div class="container container--flex">
-                <div class="column column--50">
-                    <img src="img/imagen-vet.jpg" alt="">
+                <div class="column column--33">
+                    <h3 class="our-team__title">Alexis</h3>
+                    <img src="img/vet1.jpg" alt="" class="our-team__img">
+                    <p class="our-team__txt">Lorem ipsum dolor sit amet consectetur adipisicing elit. At amet perferendis dignissimos quisquam deserunt dolorum debitis delectus excepturi quibusdam. Neque officiis tenetur impedit quam labore incidunt perspiciatis minima nisi nihil.</p>
                 </div>
-                <div class="column column--50">
-                    <h3 class="column__title">Somos una veterinaria dedicada a la salud de tu mascota</h3>
-                    <p class="column__txt">Estamos ubicados en Libertad #666 - Valparaíso, Chile </p>
-                    <p class="column__txt">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quae reprehenderit quis eligendi aliquam eaque temporibus facilis labore dolorum, natus et iste quaerat eveniet iusto cupiditate eos dicta ipsam rem? Magnam! </p>
+                <div class="column column--33">
+                    <h3 class="our-team__title">Esteban</h3>
+                    <img src="img/vet2.jpg" alt="" class="our-team__img">
+                    <p class="our-team__txt">Lorem ipsum dolor sit amet consectetur adipisicing elit. At amet perferendis dignissimos quisquam deserunt dolorum debitis delectus excepturi quibusdam. Neque officiis tenetur impedit quam labore incidunt perspiciatis minima nisi nihil.</p>
                 </div>
-            </div>
-        </section>
-
-        <section class="group adopciones">
-            <h2 class="group__title">Mascotas en Adopción</h2>
-            <div class="container container--flex">
-                <div class="column column--50--25">
-                    <img src="img/cola.jpg" alt="" class="adopciones__img">
-                    <div class="adopciones__titulo">Cola</div>
-                    <div class="adopciones__raza">Romana</div>
-                </div>
-                <div class="column column--50--25">
-                    <img src="img/leon.jpg" alt="" class="adopciones__img">
-                    <div class="adopciones__titulo">Leon</div>
-                    <div class="adopciones__raza">Poodle-Maltes</div>
-                </div>
-                <div class="column column--50--25">
-                    <img src="img/bonnie.jpg" alt="" class="adopciones__img">
-                    <div class="adopciones__titulo">Bonnie</div>
-                    <div class="adopciones__raza">Labrador</div>
-                </div>
-                <div class="column column--50--25">
-                    <img src="img/negrita.jpg" alt="" class="adopciones__img">
-                    <div class="adopciones__titulo">Negrita</div>
-                    <div class="adopciones__raza">Bombay</div>
+                <div class="column column--33">
+                    <h3 class="our-team__title">Julio</h3>
+                    <img src="img/vet3.jpg" alt="" class="our-team__img">
+                    <p class="our-team__txt">Lorem ipsum dolor sit amet consectetur adipisicing elit. At amet perferendis dignissimos quisquam deserunt dolorum debitis delectus excepturi quibusdam. Neque officiis tenetur impedit quam labore incidunt perspiciatis minima nisi nihil.</p>
                 </div>
             </div>
         </section>
-
     </main>
 
     <footer class="main-footer">
