--- a/contacto.html
+++ b/contacto.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0,user-scalable=yes, maximum-scale=3.0, minimum-scale=1.0">
-    <title>Veterinaria Cola</title>
+    <title>Contacto | Veterinaria Cola</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="icons/icon.png">
 </head>
@@ -38,7 +38,7 @@
                     <a href="adopciones.html" class="menu__link">Adopciones</a>
                 </li>
                 <li class="menu__item">
-                    <a href="conocenos.html" class="menu__link">Conócenos</a>
+                    <a href="conocenos.html" class="menu__link ">Conócenos</a>
                 </li>
                 <li class="menu__item">
                     <a href="contacto.html" class="menu__link menu__link--select">Contacto</a>
