--- a/conocenos.html
+++ b/conocenos.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0,user-scalable=yes, maximum-scale=3.0, minimum-scale=1.0">
-    <title>Veterinaria Cola</title>
+    <title>Conócenos | Veterinaria Cola</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/conocenos.css">
     <link rel="shortcut icon" href="icons/icon.png">
@@ -75,7 +75,7 @@
                     <p class="our-team__txt">Lorem ipsum dolor sit amet consectetur adipisicing elit. At amet perferendis dignissimos quisquam deserunt dolorum debitis delectus excepturi quibusdam. Neque officiis tenetur impedit quam labore incidunt perspiciatis minima nisi nihil.</p>
                 </div>
                 <div class="column column--33">
-                    <h3 class="our-team__title">Esteban</h3>
+                    <h3 class="our-team__title">Alanis</h3>
                     <img src="img/vet2.jpg" alt="" class="our-team__img">
                     <p class="our-team__txt">Lorem ipsum dolor sit amet consectetur adipisicing elit. At amet perferendis dignissimos quisquam deserunt dolorum debitis delectus excepturi quibusdam. Neque officiis tenetur impedit quam labore incidunt perspiciatis minima nisi nihil.</p>
                 </div>
