--- a/conocenos.html
+++ b/conocenos.html
@@ -86,6 +86,7 @@
                 </div>
             </div>
         </section>
+        <div id="map"></div>
     </main>
 
     <footer class="main-footer">
@@ -116,6 +117,8 @@
         </div>
     </footer>
     <script src="js/menu.js"></script>
+    <script src="js/mapa.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDaeWicvigtP9xPv919E-RNoxfvC-Hqik&callback=iniciarMap"></script>
 </body>
 
 </html>
