--- a/contacto.html
+++ b/contacto.html
@@ -58,77 +58,39 @@
     </section>
 
     <main class="main">
-        <section class="group group--color">
-            <div class="container">
-                <h2 class="main__title">Contáctanos</h2>
-                <p class="main__txt">Estamos al cuidado de tu mascota</p>
+        <section class="group contact">
+            <h2 class="group__title">Contáctenos</h2>
+            <div class="containter container--flex">
+                <div class="contact-information column column--50">
+                    <h3 class="column__title">Información de contacto</h3>
+                    <p class="column__txt">
+                        Lorem ipsum dolor sit.
+                    </p>
+                    <p class="column__txt">
+                        <span class="icon-phone">
+                            <img src="icons/icon-phone.png" alt=""> 
+                        </span>Teléfono 1: 999-999-999
+                    </p>
+                    <p class="column__txt">
+                        <span class="icon-phone">
+                            <img src="icons/icon-phone.png" alt=""> 
+                        </span> Teléfono 2: 555-555-555
+                    </p>
+                    <p class="column__txt">
+                        <span class="icon-location">
+                            <img src="icons/icon-location.png" alt=""> 
+                        </span>Libertad #666 - Valparaíso, Chile
+                    </p>
+
+                    <p class="column__txt">
+                        <span class="icon-mail">
+                            <img src="icons/icon-mail.png" alt="">
+                        </span>consultas@veterinariacola.com
+                    </p>
+                </div>
+                <div class="formulario column column--50"></div>
             </div>
         </section>
-
-        <section class="group main__about__description">
-            <div class="container container--flex">
-                <div class="column column--50">
-                    <img src="img/vet-fachada.jpg" alt="">
-                </div>
-                <div class="column column--50">
-                    <h3 class="column__title">Datos de contacto</h3>
-                    <p class="column__txt">Teléfono: +569 1234 5678 </p>
-                    <p class="column__txt">consultas@veterinariacola.com </p>
-                    <p class="column__txt">Atención las 24 horas de la semana. </p>
-                </div>
-            </div>
-        </section>
-
-        <section class="main-formulario group">
-            <fieldset class="container container--flex">
-                <legend>Formulario de Contacto</legend>
-                <form action="#" method="POST">
-                    <div class="container container--flex">
-                        <div class="column column--50">
-                            <label for="name">Nombre:</label>
-                            <input type="text" id="nombre" name="nombre" placeholder="Ingrese su nombre"><br><br>
-                            <label for="correo">Correo:</label>
-                            <input type="email" id="email" name="email" placeholder="Ingrese su email"><br><br>
-                            <label for="telefono">Teléfono:</label>
-                            <input type="text" id="telefono" name="telefono" placeholder="Ingrese su teléfono"><br><br>
-                            <input type="submit" value="Enviar">&nbsp;&nbsp;
-                            <input type="reset" value="Limpiar"><br><br>
-                        </div>
-                        <div class="column column--50">
-                            <textarea name="mensaje" id="mensaje" cols="30" rows="10"></textarea><br><br>
-                        </div>
-                    </div>
-                </form>
-            </fieldset>
-
-        </section>
-
-        <section class="group adopciones">
-            <h2 class="group__title">Mascotas en Adopción</h2>
-            <div class="container container--flex">
-                <div class="column column--50--25">
-                    <img src="img/cola.jpg" alt="" class="adopciones__img">
-                    <div class="adopciones__titulo">Cola</div>
-                    <div class="adopciones__raza">Romana</div>
-                </div>
-                <div class="column column--50--25">
-                    <img src="img/leon.jpg" alt="" class="adopciones__img">
-                    <div class="adopciones__titulo">Leon</div>
-                    <div class="adopciones__raza">Poodle-Maltes</div>
-                </div>
-                <div class="column column--50--25">
-                    <img src="img/bonnie.jpg" alt="" class="adopciones__img">
-                    <div class="adopciones__titulo">Bonnie</div>
-                    <div class="adopciones__raza">Labrador</div>
-                </div>
-                <div class="column column--50--25">
-                    <img src="img/negrita.jpg" alt="" class="adopciones__img">
-                    <div class="adopciones__titulo">Negrita</div>
-                    <div class="adopciones__raza">Bombay</div>
-                </div>
-            </div>
-        </section>
-
     </main>
 
     <footer class="main-footer">
