--- a/contacto.html
+++ b/contacto.html
@@ -94,17 +94,26 @@
                         <a href="" class="social-icon__link"><span class="icon-"><img src="icons/icon-mail.png" alt=""></span></a>
                     </div>
                 </div>
-                <form action="" method="" class="formulario column column--50" name="formulario">
-                    <label for="name" class="formulario__label">Nombre:</label>
-                    <input type="text" class="formulario__input-txt" name="nombre" id="nombre">
-                    <label for="" class="formulario__label">Correo:</label>
-                    <input type="email" class="formulario__input-txt" name="correo" id="correo">
-                    <label for="" class="formulario__label">Teléfono:</label>
-                    <input type="text" class="formulario__input-txt" name="telefono" id="telefono">
-                    <label for="" class="formulario__label">Mensaje:</label>
-                    <textarea name="mensaje" id="mensaje" cols="30" rows="10" class="formulario__textarea">
-                    </textarea>
-                    <input type="submit" class="btn formulario__btn" value="Enviar">
+                <form action="" method="post" class="formulario column column--50" name="formulario" id="formulario">
+                    <p>
+                        <label for="name" class="formulario__label">Nombre</label>
+                        <input type="text" id="name" name="name" class="formulario__input-txt" required>
+                    </p>
+                    <p>
+                        <label for="email" class="formulario__label">Correo</label>
+                        <input type="email" id="email" name="email" class="formulario__input-txt" required>
+                    </p>
+                    <p>
+                        <label for="telefono" class="formulario__label">Teléfono</label>
+                        <input type="phone" id="telefono" name="telefono" class="formulario__input-txt" required>
+                    </p>
+                    <p>
+                        <label for="textarea" class="formulario__label">Mensaje</label>
+                        <textarea name="textarea" id="textarea" cols="30" rows="10" class="formulario__textarea" required></textarea>
+                    </p>
+                    <p>
+                        <input type="submit" class="submit btn formulario__btn" value="Enviar">
+                    </p>
                 </form>
             </div>
         </section>
@@ -138,6 +147,7 @@
         </div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.0/jquery.validate.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="js/menu.js"></script>
