--- a/contacto.html
+++ b/contacto.html
@@ -97,22 +97,23 @@
                 <form action="" method="post" class="formulario column column--50" name="formulario" id="formulario">
                     <p>
                         <label for="name" class="formulario__label">Nombre</label>
-                        <input type="text" id="name" name="name" class="formulario__input-txt" required>
+                        <input type="text" id="name" name="name" class="formulario__input-txt">
                     </p>
                     <p>
                         <label for="email" class="formulario__label">Correo</label>
-                        <input type="email" id="email" name="email" class="formulario__input-txt" required>
+                        <input type="email" id="email" name="email" class="formulario__input-txt">
                     </p>
                     <p>
                         <label for="telefono" class="formulario__label">Teléfono</label>
-                        <input type="phone" id="telefono" name="telefono" class="formulario__input-txt" required>
+                        <input type="phone" id="telefono" name="telefono" class="formulario__input-txt">
                     </p>
                     <p>
                         <label for="textarea" class="formulario__label">Mensaje</label>
-                        <textarea name="textarea" id="textarea" cols="30" rows="10" class="formulario__textarea" required></textarea>
+                        <textarea name="textarea" id="textarea" cols="30" rows="10" class="formulario__textarea"></textarea>
                     </p>
                     <p>
-                        <input type="submit" class="submit btn formulario__btn" value="Enviar">
+                        <input type="reset" class="btn formulario__btn" value="Limpiar">
+                        <input type="submit" class="btn formulario__btn" value="Enviar">
                     </p>
                 </form>
             </div>
