--- a/contacto.html
+++ b/contacto.html
@@ -94,7 +94,7 @@
                         <a href="" class="social-icon__link"><span class="icon-"><img src="icons/icon-mail.png" alt=""></span></a>
                     </div>
                 </div>
-                <form action="mail.php" method="post" class="formulario column column--50" name="formulario" id="formulario">
+                <form action="mail.php" method="POST" class="formulario column column--50" name="formulario" id="formulario">
                     <p>
                         <label for="name" class="formulario__label">Nombre</label>
                         <input type="text" id="name" name="name" class="formulario__input-txt">
