--- a/contacto.html
+++ b/contacto.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/contacto.css">
     <link rel="shortcut icon" href="icons/icon.png">
+    <script src="jquery-3.5.1.min.js"></script>
 </head>
 
 <body>
@@ -94,10 +95,10 @@
                         <a href="" class="social-icon__link"><span class="icon-"><img src="icons/icon-mail.png" alt=""></span></a>
                     </div>
                 </div>
-                <form action="mail.php" method="POST" class="formulario column column--50" name="formulario" id="formulario">
+                <form action="enviar.php" method="POST" class="formulario column column--50" name="formulario" id="formulario">
                     <p>
                         <label for="name" class="formulario__label">Nombre</label>
-                        <input type="text" id="name" name="name" class="formulario__input-txt">
+                        <input type="text" id="nombre name" name="nombre name" class="formulario__input-txt">
                     </p>
                     <p>
                         <label for="email" class="formulario__label">Correo</label>
@@ -109,12 +110,15 @@
                     </p>
                     <p>
                         <label for="textarea" class="formulario__label">Mensaje</label>
-                        <textarea name="textarea" id="textarea" cols="30" rows="10" class="formulario__textarea"></textarea>
+                        <textarea name="textarea" id="textarea mensaje" cols="30" rows="10" class="formulario__textarea"></textarea>
                     </p>
                     <p>
                         <input type="reset" class="btn formulario__btn" value="Limpiar">
-                        <input type="submit" class="btn formulario__btn" value="Enviar">
+                        <input type="submit" class="btn formulario__btn" value="Enviar" onclick="enviar_datos_ajax();" id="btnSend">
                     </p>
+                    <div id="mostrardatos">
+
+                    </div>
                 </form>
             </div>
         </section>
